--- a/src/App.css
+++ b/src/App.css
@@ -63,9 +63,9 @@
 }
 
 .headercontainer{
-  position: fixed;
   width: 72%;
-  margin-left: 0.2rem;
+  margin-left: 13.8%;
+  
 }
 
 .filterContainer{
